--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <h2>Tu descanso, elevado a nivel Deluxe</h2>
 
-<img src="/images/hotel.png" alt="imagen de hotel">
+<img src="images/hotel.png" alt="imagen de hotel">
 
 <p>Un hotel Deluxe que vas a desear volver situado en Naka, Japón con vistas hermosas y confort garantizado al mejor precio</p>
 
